--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Intro to Software Development</title>
-    <link rel="stylesheet" href="style2.css" type="text/css">
-    <script src="app2.js"></script>
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <script src="app.js"></script>
   </head>
   <body>
       <header>
