Created images folder. Adjusted divs in header.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
   </head>
   <body>
       <header>
+        <section></section>
+            <div>
+                
+            </div>
+          <div>
           <h1>Introduction to Software Development</h1>
-          <ul>
+          </div>
+        </section>
+          <div>
+            <ul>
               <li><a href="#What_is_HTML?" title="This section will cover the fundamentals of Hypertext Markup Language">What is HTML?</a></li>
               <li><a href="#Styling_HTML_with_CSS" title="This section will cover the fundamentals of Cascading Style Sheets">Styling HTML with CSS</a></li>
               <li><a href="#Guide_to_JavaScript" title="This section will cover the fundamentals of applying JavaScript">Guide to JavaScript</a></li>
-          </ul>
+            </ul>
+          </div>
       </header>
       <main>
         <section>
