--- a/Home-Page/index.html
+++ b/Home-Page/index.html
@@ -1,11 +1,29 @@
-<!DOCTYPE html>>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <title>CodeFellows 201</title>
-        <link rel="stylesheet" href="home.css" type="text/css">
-        <script src="home.js"></script>
+        <link rel="stylesheet" href="style.css" type="text/css">
+        <script src="index.js"></script>
     </head>
     <body>
+        <header>
+            <div class="logobar">
+                <div>
+                    <img src="/images/Logo.png" id="sitelogo" alt="Site Logo">
+                </div>
+            </div>
+            <div class="tab-bar">
+                <nav class="navigation">
+                    <ul>
+                        <li><a href="Home-Page/index.html">HOME</a></li>
+                        <li><a href="#">MARKDOWN</a></li>
+                        <li><a href="HTML-Page/html.html">HTML</a></li>
+                        <li><a href="CSS-Page/css.html">CSS</a></li>
+                        <li><a href="javascript-page/javascript.html">JAVASCRIPT</a></li>
+                    </ul> 
+                </nav>
+            </div>
+        </header>
     </body>
 </html>
