updated css.htm;, fixed master style.css file

--- a/CSS-Page/css.html
+++ b/CSS-Page/css.html
@@ -3,13 +3,12 @@
         <head>
             <meta charset="utf-8">
             <title>CodeFellows 201</title>
-            <link rel="stylesheet" href="Home-Page/style.css" type="text/css">
+            <link rel="stylesheet" href="/Home-Page/style.css" type="text/css">
             <script src="home.js"></script>
         </head>
         <body>
             <header>
                 <h1><a id="Styling_HTML_with_CSS"></a></h1>
-            </header>
                 <div class="logobar">
                     <div>
                     <img src="/images/Logo.png" id="sitelogo" alt="Site Logo">
@@ -18,11 +17,11 @@
                 <div class="tab-bar">
                     <nav class="navigation">
                         <ul>
-                            <li><a href="Home-Page/index.html">HOME</a></li>
+                            <li><a href="/Home-Page/index.html">HOME</a></li>
                             <li><a href="#">MARKDOWN</a></li>
-                            <li><a href="HTML-Page/html.html">HTML</a></li>
-                            <li><a href="CSS-Page/css.html">CSS</a></li>
-                            <li><a href="javascript-page/javascript.html">JAVASCRIPT</a></li>
+                            <li><a href="/HTML-Page/html.html">HTML</a></li>
+                            <li><a href="css.html">CSS</a></li>
+                            <li><a href="/javascript-page/javascript.html">JAVASCRIPT</a></li>
                         </ul> 
                     </nav>
                 </div>
