Changed background color, fixed menu, and made comments in CSS.

--- a/Home-Page/index.html
+++ b/Home-Page/index.html
@@ -9,6 +9,11 @@
     <body>
         <header>
             <div class="logobar">
+                <div id= "pagenamebox">
+                    <h1 id="pagename">
+                        Code 102: Help Guide
+                    </h1>
+                </div>
                 <div>
                     <img src="/images/Logo.png" id="sitelogo" alt="Site Logo">
                 </div>
