--- a/CSS-Page/css.html
+++ b/CSS-Page/css.html
@@ -8,7 +8,7 @@
         </head>
         <body>
             <header>
-                <h1><a id="Styling_HTML_with_CSS"></a></h1>
+                <h1>Styling HTML with CSS</h1>
                 <div class="logobar">
                     <div>
                     <img src="/images/Logo.png" id="sitelogo" alt="Site Logo">
