--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>CodeFellows 201</title>
-        <link rel="stylesheet" href="style.css" type="text/css">
-        <script src="index.js"></script>
+        <link rel="stylesheet" href="/Home-Page/style.css" type="text/css">
+        <script src="/Home-Page/index.js"></script>
     </head>
     <body>
         <header>
