Attempt to resolve missing logo img.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     </h1>
                 </div>
                 <div>
-                    <img src="/images/Logo.png" id="sitelogo" alt="Site Logo">
+                    <img src="images/Logo.png" id="sitelogo" alt="Site Logo">
                 </div>
             </div>
             <div class="tab-bar">
