--- a/HTML-Page/html.html
+++ b/HTML-Page/html.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="utf-8">
             <title>HTML Guide</title>
-            <!--I copied and pasted the "master .css file into my HTML-Page folder to apply the stylesheet that we are wanting to have across each page. Then, I made sure to rename the new .css file to what you see below in the href."-->
+            <!--I copied and pasted the "master .css file into my HTML-Page folder to apply the stylesheet that we are wanting to have across each page. Then, I made sure to rename the new .css file to what you see below in the href because I will also be adding a few of my own touches.-->
             <link rel="stylesheet" href="html-style.css" type="text/css">
             <script src="index.js"></script>
         </head>
@@ -16,19 +16,19 @@
                             </h1>
                         </div>
                         <div>
-            <!--I had to copy and paste the img file into my own page's folder. Though, I wonder if I used a / in front of the file name to get it to show on my page would've worked too?-->
-                            <img src="Logo.png" id="sitelogo" alt="Site Logo">
+            <!--I had to use ../ in the img src= to access the file outside of my own folder of files, then again to access the img file within another folder.-->
+                            <img src="../images/Logo.png" id="sitelogo" alt="Site Logo">
                         </div>
                     </div>
                     <div class="tab-bar">
                         <nav class="navigation">
                             <ul>
-            <!--I placed an / in front of the index.html file since my page is not the "home page" and had to href a file outside of my own.-->
-                                <li><a href="/index.html">HOME</a></li>
+            <!--I placed an ./ in front of the index.html file since my page is not the "home page" and had to href a file one step outside of my own file's pathway. GitHub and some other version control systems that allow webpage construction can be very particular in how they recognize the files.-->
+                                <li><a href="./index.html">HOME</a></li>
                                 <li><a href="#">MARKDOWN</a></li>
-                                <li><a href="/HTML-Page/html.html">HTML</a></li>
-                                <li><a href="/CSS-Page/css.html">CSS</a></li>
-                                <li><a href="/javascript-page/javascript.html">JAVASCRIPT</a></li>
+                                <li><a href="./HTML-Page/html.html">HTML</a></li>
+                                <li><a href="./CSS-Page/css.html">CSS</a></li>
+                                <li><a href="./javascript-page/javascript.html">JAVASCRIPT</a></li>
                             </ul> 
                         </nav>
                     </div>
