--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <div class="tab-bar">
                 <nav class="navigation">
                     <ul>
-                        <li><a href="./Home-Page/index.html">HOME</a></li>
+                        <li><a href="./index.html">HOME</a></li>
                         <li><a href="#">MARKDOWN</a></li>
-                        <li><a href="./HTML-Page/html.html">HTML</a></li>
-                        <li><a href="./CSS-Page/css.html">CSS</a></li>
-                        <li><a href="./javascript-page/javascript.html">JAVASCRIPT</a></li>
+                        <li><a href="./html.html">HTML</a></li>
+                        <li><a href="./css.html">CSS</a></li>
+                        <li><a href="./javascript.html">JAVASCRIPT</a></li>
                     </ul> 
                 </nav>
             </div>
