--- a/HTML-Page/html.html
+++ b/HTML-Page/html.html
@@ -26,7 +26,7 @@
             <!--I placed an ./ in front of the index.html file since my page is not the "home page" and had to href a file one step outside of my own file's pathway. GitHub and some other version control systems that allow webpage construction can be very particular in how they recognize the files.-->
                                 <li><a href="./index.html">HOME</a></li>
                                 <li><a href="#">MARKDOWN</a></li>
-                                <li><a href="./html.html">HTML</a></li>
+                                <li><a href="html.html">HTML</a></li>
                                 <li><a href="./css.html">CSS</a></li>
                                 <li><a href="./javascript.html">JAVASCRIPT</a></li>
                             </ul> 
