--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="tab-bar">
                 <nav class="navigation">
                     <ul>
-                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="./index.html">HOME</a></li>
                         <li><a href="#">MARKDOWN</a></li>
                         <li><a href="./html.html">HTML</a></li>
                         <li><a href="./css.html">CSS</a></li>
