home and html pathways

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul>
                         <li><a href="./index.html">HOME</a></li>
                         <li><a href="#">MARKDOWN</a></li>
-                        <li><a href="./html.html">HTML</a></li>
+                        <li><a href="./HTML-Page/html.html">HTML</a></li>
                         <li><a href="./css.html">CSS</a></li>
                         <li><a href="./javascript.html">JAVASCRIPT</a></li>
                     </ul> 
