--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                         <li><a href="./index.html">HOME</a></li>
                         <li><a href="#">MARKDOWN</a></li>
                         <li><a href="/HTML-Page/html.html">HTML</a></li>
-                        <li><a href="./css.html">CSS</a></li>
-                        <li><a href="./javascript.html">JAVASCRIPT</a></li>
+                        <li><a href="/CSS-Page/css.html">CSS</a></li>
+                        <li><a href="/javascript-page/javascript.html">JAVASCRIPT</a></li>
                     </ul> 
                 </nav>
             </div>
