--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul>
                         <li><a href="./index.html">HOME</a></li>
                         <li><a href="#">MARKDOWN</a></li>
-                        <li><a href="/HTML-Page/html.html">HTML</a></li>
+                        <li><a href="https://gearjunkie.github.io/building-a-webpage/HTML-Page/html.html">HTML</a></li>
                         <li><a href="/CSS-Page/css.html">CSS</a></li>
                         <li><a href="/javascript-page/javascript.html">JAVASCRIPT</a></li>
                     </ul> 
