Yay, I figured out how to get the page pathways to workgit add .!

--- a/CSS-Page/css.html
+++ b/CSS-Page/css.html
@@ -28,8 +28,8 @@
                                 <li><a href="../index.html">HOME</a></li>
                                 <li><a href="#">MARKDOWN</a></li>
                                 <li><a href="./HTML-Page/html.html">HTML</a></li>
-                                <li><a href="./CSS-Page/css.html">CSS</a></li>
-                                <li><a href="./javascript.html">JAVASCRIPT</a></li>
+                                <li><a href="https://gearjunkie.github.io/building-a-webpage/CSS-Page/css.html">CSS</a></li>
+                                <li><a href="https://gearjunkie.github.io/building-a-webpage/javascript-page/javascript.html">JAVASCRIPT</a></li>
                             </ul> 
                         </nav>
                     </div>
