pathways and .css files created

--- a/javascript-page/javascript.html
+++ b/javascript-page/javascript.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Intro to Software Development</title>
-    <link rel="stylesheet" href="javascript.css" type="text/css">
-    <script src="HTML-Page/app.js"></script>
-  </head>
-  <body>
-      <header>
-        <section></section>
-            <div>
-
-            </div>
-          <div>
-          <h1>Introduction to Software Development</h1>
-          </div>
-        </section>
-          <div>
-            <ul>
-              <li><a href="#What_is_HTML?" title="This section will cover the fundamentals of Hypertext Markup Language">What is HTML?</a></li>
-              <li><a href="#Styling_HTML_with_CSS" title="This section will cover the fundamentals of Cascading Style Sheets">Styling HTML with CSS</a></li>
-              <li><a href="#Guide_to_JavaScript" title="This section will cover the fundamentals of applying JavaScript">Guide to JavaScript</a></li>
-            </ul>
-          </div>
-      </header>
+  <html>
+    <head>
+      <meta charset="utf-8">
+      <title>JavaScript Guide</title>
+      <link rel="stylesheet" href="js-style.css" type="text/css">
+      <script src="index.js"></script>
+    </head>
+        <body>
+          <header>
+              <div class="logobar">
+                  <div id= "pagenamebox">
+                      <h1 id="pagename">
+                          Code Fellows Student Guide
+                      </h1>
+                  </div>
+              <div>
+<!--I had to use ../ in the img src= to access the file outside of my own folder of files, then again to access the img file within another folder.-->
+              <img src="../images/Logo.png" id="sitelogo" alt="Site Logo">
+              </div>
+              </div>
+              <div class="tab-bar">
+                  <nav class="navigation">
+                    <ul>
+                        <li><a href="../index.html">HOME</a></li>
+                        <li><a href="#">MARKDOWN</a></li>
+                        <li><a href="https://gearjunkie.github.io/building-a-webpage/HTML-Page/html.html">HTML</a></li>
+                        <li><a href="https://gearjunkie.github.io/building-a-webpage/CSS-Page/css.html">CSS</a></li>
+                        <li><a href="https://gearjunkie.github.io/building-a-webpage/javascript-page/javascript.html">JAVASCRIPT</a></li>
+                    </ul> 
+                  </nav>
+              </div>
+          </header>
       <main>
         <section>
             <a id="Guide_to_JavaScript"></a>
