--- a/CSS-Page/css.html
+++ b/CSS-Page/css.html
@@ -4,9 +4,8 @@
             <meta charset="utf-8">
             <title>CSS Guide</title>
             <!--I copied and pasted the "master .css file into my HTML-Page folder to apply the stylesheet that we are wanting to have across each page. Then, I made sure to rename the new .css file to what you see below in the href because I will also be adding a few of my own touches.-->
-
-            <link rel="stylesheet" href="/Home-Page/style.css" type="text/css">
-            <script src="home.js"></script>
+            <link rel="stylesheet" href="css-style.css" type="text/css">
+            <script src="index.js"></script>
         </head>
         <body>
             <header>
@@ -24,10 +23,9 @@
                     <div class="tab-bar">
                         <nav class="navigation">
                             <ul>
-            <!--I placed an ../ in front of the index.html file since my page is not the "home page" and had to href a file one step outside of my own file's pathway. GitHub and some other version control systems that allow webpage construction can be very particular in how they recognize the files.-->
                                 <li><a href="../index.html">HOME</a></li>
                                 <li><a href="#">MARKDOWN</a></li>
-                                <li><a href="./HTML-Page/html.html">HTML</a></li>
+                                <li><a href="https://gearjunkie.github.io/building-a-webpage/HTML-Page/html.html">HTML</a></li>
                                 <li><a href="https://gearjunkie.github.io/building-a-webpage/CSS-Page/css.html">CSS</a></li>
                                 <li><a href="https://gearjunkie.github.io/building-a-webpage/javascript-page/javascript.html">JAVASCRIPT</a></li>
                             </ul> 
